--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
   "require": {
-    "twig/twig": "~1.0"
+    "twig/twig": "~1.0",
+    "phpmailer/phpmailer": "^5.2",
+    "league/oauth2-google": "^2.0"
   }
 }
